# Polars.NET

./: .gitignore  0.3.0ReleaseNote.md  0.3.1ReleaseNote.md  Directory.Build.props  GenerateFSharpDocs.fsx  LICENSE  Polars.NET.sln  README.md  build_docs.sh
.github/workflows/: release.yml
NativePackages/: Polars.NET.Native.linux-arm64.csproj  Polars.NET.Native.linux-musl-arm64.csproj  Polars.NET.Native.linux-musl-x64.csproj  Polars.NET.Native.linux-x64.csproj  Polars.NET.Native.osx-arm64.csproj  Polars.NET.Native.win-x64.csproj
Polars.CSharp/: CloudOptions.cs  DataFrame.cs  DataType.cs  Delta.cs  Enums.cs  Expr.cs  GroupByBuilder.cs  LazyFrame.cs  LazyGroupByBuilder.cs  Polars.CSharp.csproj  Polars.cs  Schema.cs  Selector.cs  Series.cs  SqlContext.cs  UdfUtils.cs
Polars.CSharp.Tests/: AsyncTests.cs  CleaningTests.cs  DataFrameTests.cs  DataTypeTests.cs  ExcelTests.cs  ExprTests.cs  IOTests.cs  IntegrationTests.cs  IntegtationFact.cs  LazyFrameTests.cs  MetaDataTests.cs  ParquetPartitionTests.cs  Polars.CSharp.Tests.csproj  ScalarTests.cs  SelectorTests.cs  SeriesTests.cs  StreamingTests.cs  TimeSeriesTests.cs  UdfTests.cs
Polars.FSharp/: CloudOptions.fs  Delta.fs  Display.fs  Enums.fs  Exprs.fs  Extensions.fs  Ops.fs  Polars.FSharp.fsproj  Polars.fs  Types.fs  UdfUtils.fs
Polars.FSharp.Tests/: BasicTests.fs  ComplexTests.fs  DeltaTests.fs  ExcelTests.fs  ExprTests.fs  IOTests.fs  Polars.FSharp.Tests.fsproj  SafetyTests.fs  ScanParquetTests.fs  SelectorTests.fs  SeriesTests.fs  UDFTests.fs
Polars.Integration.Tests/: AWSTests.cs  AzureTests.cs  DeltaLakeAWSTests.cs  DeltaLakeTests.cs  GCPTests.cs  HttpTests.cs  HuggingFaceTests.cs  MsSqlTests.cs  Polars.Integration.Tests.csproj
Polars.Integration.Tests/Fixtures/: AzuriteFixture.cs  GcpFixture.cs  HttpFixture.cs  MinioFixture.cs  MsSqlFixture.cs
Polars.Integration.Tests/Utils/: DeltaLakeTestHelper.cs
Polars.NET.Core/: 0.3.0ReleaseNote.md  Enums.cs  Handles.cs  Helpers.cs  NativeBindings.cs  Polars.NET.Core.csproj  PolarsException.cs
Polars.NET.Core/Arrow/: ArrowConverter.cs  ArrowExtensions.cs  ArrowFfiBridge.cs  ArrowReader.cs  ArrowSchema.cs  ArrowStreamInterop.cs  CArrowArrayStream.cs  FSharpHelper.cs  Int128Array.cs  PrependEnumerator.cs
Polars.NET.Core/Data/: ArrowToDbStream.cs  ColumnBufferFactory.cs  DataReaderExtensions.cs  DbToArrowStream.cs  IpcStreamService.cs
Polars.NET.Core/Helpers/: ArrayHelpers.cs  BoolPackers.cs  DateOnlyHelpers.cs  DateTimeHelpers.cs  DateTimeOffsetHelpers.cs  DecimalPackers.cs  FSharpHelpers.cs  Float16Helpers.cs  Int128Helpers.cs  Int16Helpers.cs  Int32Helpers.cs  Int64Helpers.cs  Int8Helpers.cs  MemoryLayoutCheckers.cs  SeriesFactory.cs  StringPackers.cs  StructPacker.cs  TimeOnlyHelpers.cs  TimeSpanHelpers.cs
Polars.NET.Core/Native/: NativeBindings.DataFrame.cs  NativeBindings.DataTypes.cs  NativeBindings.Delta.cs  NativeBindings.Exprs.cs  NativeBindings.IO.cs  NativeBindings.LazyFrame.cs  NativeBindings.SQL.cs  NativeBindings.Schema.cs  NativeBindings.Selectors.cs  NativeBindings.Series.cs
Polars.NET.Core/Wrappers/: Wrappers.Core.cs  Wrappers.DataFrame.cs  Wrappers.DataTypes.cs  Wrappers.Delta.cs  Wrappers.Expr.cs  Wrappers.IO.cs  Wrappers.Lazy.cs  Wrappers.LazyFrame.cs  Wrappers.Schema.cs  Wrappers.Selectors.cs  Wrappers.Series.cs  Wrappers.Sql.cs  Wrappers.UDF.cs
docs/: FSharpQuickStart.ipynb  docfx.json  index.md  toc.yml
docs/api/: index.md  toc.yml
docs/articles/: intro.md  quickstart.md
docs/styles/: main.css
example/: CSharpQuickStart.ipynb  FSharpQuickStart.ipynb  quickstart.csx  quickstart.fsx
native_shim/: Cargo.toml  tree
native_shim/src/: datatypes.rs  deltalake.rs  eager.rs  error.rs  excel_reader.rs  excel_writer.rs  expr.rs  io.rs  io_remote.rs  lazy.rs  lib.rs  schema.rs  selectors.rs  series.rs  sql.rs  types.rs  udf.rs  utils.rs
native_shim/src/delta/: delete.rs  deletion_vector.rs  maintenance.rs  merge.rs  merge_ordered.rs  mod.rs  optimize.rs  read.rs  utils.rs  write.rs  zorder.rs
native_shim/src/pl_io/: arrow.rs  ffi_buffer.rs  io_utils.rs  mod.rs
native_shim/src/pl_io/avro/: read.rs  write.rs
native_shim/src/pl_io/csv/: csv_utils.rs  mod.rs  read.rs  write.rs
native_shim/src/pl_io/ipc/: ipc_utils.rs  mod.rs  read.rs  write.rs
native_shim/src/pl_io/json/: json_utils.rs  mod.rs  read.rs  write.rs
native_shim/src/pl_io/parquet/: mod.rs  parquet_utils.rs  read.rs  write.rs
